--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "axios": "^0.27.2",
     "formik": "^2.2.9",
     "history": "^5.3.0",
+    "i18next": "^21.8.5",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.16.9",
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
