--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux-thunk": "^2.4.1",
     "sass-loader": "^13.0.0",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.4.17",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
